--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
     <string name="sign_up">Sign up to continue</string>
     <string name="balance">Balance</string>
     <string name="cards">Attached cards</string>
+    <string name="history">History</string>
+    <string name="transaction">Transaction from</string>
+    <string name="date">01 august 2022, 14:10</string>
+    <string name="fullName">Ozar Aini</string>
+    <string name="personal_info">Personal Info</string>
+    <string name="qr_text">QR Code</string>
+    <string name="settings_language">Language</string>
+    <string name="version">Version</string>
 </resources>
