--- a/app/src/main/res/values-os-rRU/strings.xml
+++ b/app/src/main/res/values-os-rRU/strings.xml
@@ -18,4 +18,5 @@
     <string name="personal_info">Personal Info</string>
     <string name="qr_text">QR Code</string>
     <string name="version">Version</string>
+    <string name="transaction_history">Transaction History</string>
 </resources>
