--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="qr_text">QR Code</string>
     <string name="settings_language">Language</string>
     <string name="version">Version</string>
+    <string name="transaction_history">Transaction History</string>
 </resources>
