--- a/app/src/main/res/values-os-rRU/strings.xml
+++ b/app/src/main/res/values-os-rRU/strings.xml
@@ -6,36 +6,40 @@
     <string name="sign_in">Авторизуйтесь для Продолжения</string>
     <string name="password">Пароль</string>
     <string name="approval">Я внимательно прочитал и согласен(а) с указанными условиями</string>
-    <string name="next">Next</string>
-    <string name="rus">Rus</string>
-    <string name="eng">Eng</string>
-    <string name="sign_up">Sign up to continue</string>
-    <string name="balance">Balance</string>
-    <string name="cards">Attached cards</string>
-    <string name="history">History</string>
-    <string name="transaction">Transaction from</string>
-    <string name="fullName">Ozar Aini</string>
-    <string name="personal_info">Personal Info</string>
-    <string name="qr_text">QR Code</string>
-    <string name="version">Version</string>
-    <string name="transaction_history">Transaction History</string>
-    <string name="change_profile">Change Profile Information</string>
-    <string name="name">Name</string>
-    <string name="surname">Surname</string>
-    <string name="change_birth">Change Birth Date</string>
-    <string name="apply_changes">Apply Changes</string>
-    <string name="register">Register</string>
-    <string name="amount_entry">Amount</string>
-    <string name="send_to">Send to</string>
-    <string name="send">Send</string>
+    <string name="next">Дальше</string>
+    <string name="rus">Рус</string>
+    <string name="eng">Англ</string>
+    <string name="sign_up">Зарегистрируйтесь, чтобы продолжить</string>
+    <string name="balance">Баланс</string>
+    <string name="cards">Привязанные карты</string>
+    <string name="history">История</string>
+    <string name="transaction">Транзакция от</string>
+    <string name="fullName">Полное Имя</string>
+    <string name="personal_info">Персональные данные</string>
+    <string name="qr_text">QR Код</string>
+    <string name="version">Версия</string>
+    <string name="transaction_history">История транзакций</string>
+    <string name="change_profile">Поменять информацию профиля</string>
+    <string name="name">Имя</string>
+    <string name="surname">Фамилия</string>
+    <string name="change_birth">Поменять дату рождения</string>
+    <string name="apply_changes">Применить изменения</string>
+    <string name="register">Регистрация</string>
+    <string name="amount_entry">Количество</string>
+    <string name="send_to">Отправить</string>
+    <string name="send">Отправить</string>
     <string name="number">+992</string>
-    <string name="To_wallet">To wallet</string>
-    <string name="addcard">Add Card</string>
-    <string name="card_type">Please choose card type</string>
-    <string name="card_name_text">Full Name on Card</string>
-    <string name="email">Email</string>
-    <string name="card_number">Card Number</string>
-    <string name="valid">Valid to</string>
-    <string name="card_replenish">Replenish balance by card</string>
-    <string name="Cashbacks">Cashbacks</string>
+    <string name="To_wallet">На кашелек</string>
+    <string name="addcard">Добавить карту</string>
+    <string name="card_type">Пожалуйста выберете тип карты</string>
+    <string name="card_name_text">Полное имя на карте</string>
+    <string name="email">Эмейл</string>
+    <string name="card_number">Номер карты</string>
+    <string name="valid">Годен до</string>
+    <string name="card_replenish">Пополнить баланс с карты</string>
+    <string name="Cashbacks">Кэшбеки</string>
+    <string name="scan_qr">Сканировать QR код</string>
+    <string name="login_registration">Логин</string>
+    <string name="succesful_tranfer">Ваши деньги успешно отправлены</string>
+    <string name="change_language">Change Language</string>
 </resources>
