updates in viewModel and retrofit requests

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -40,4 +40,5 @@
     <string name="login_registration">login</string>
     <string name="succesful_tranfer">Your money are succesfully transfered!</string>
     <string name="change_language">Change Language</string>
+    <string name="receiverTransaction">Receiver</string>
 </resources>
