--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -25,7 +25,7 @@
     <string name="change_birth">Поменять дату рождения</string>
     <string name="apply_changes">Применить изменения</string>
     <string name="register">Регистрация</string>
-    <string name="amount_entry">Количество</string>
+    <string name="amount_entry">Сумма</string>
     <string name="send_to">Отправить</string>
     <string name="send">Отправить</string>
     <string name="number">+992</string>
@@ -50,6 +50,7 @@
     <string name="transaction_text" >Перевод</string>
     <string name="transactionID">ID Перевода:</string>
     <string name="help">Помощь</string>
+    <string name="succesful_registration">Успешно зарегистриованны</string>
 
 
     <string-array name="CardType">
